Disable risky image file extensions in ad block list
Commented out `.gif` and `.png` extensions in the ad block list due to potential risks. This ensures safer filtering while maintaining flexibility for future adjustments.

--- a/adbliterator/ad_list.yaml
+++ b/adbliterator/ad_list.yaml
@@ -100,8 +100,8 @@ KNOWN_PATHS:
   - /p/insights
   - /Collector/3.0
   - /external
-  - .gif # RISKY (but enabled)
-  - .png # RISKY (but enabled)
+  # - .gif # RISKY
+  # - .png # RISKY
 
 ### +-+-+-+-+-+-+-+ FLASH EXTENSIONS +-+-+-+-+-+-+-+ ###
 # File extensions specific to Adobe Flash content,
